--- a/src/app/pages/direccion-gps/direccion-gps.page.scss
+++ b/src/app/pages/direccion-gps/direccion-gps.page.scss
@@ -27,7 +27,7 @@
     width: 40px;
     top: 50%;
     left: 50%;
-    // margin-left: -21px;
-    // margin-top: -41px;
+    margin-left: -21px;
+    margin-top: -41px;
   }
 }
