--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,10 +1,37 @@
-<ion-content padding>
+<ion-content>
+
+    <div class="contenedor">
+        <h1 class="text-c">
+            Bienvenido
+        </h1>
+        <span class="text-c text-block">
+            Inicie sesión con su cuenta existente
+        </span>
+        <ion-item lines="none">
+            <ion-input type="email" placeholder="E-mail"></ion-input>
+        </ion-item>
+        <ion-item lines="none">
+            <ion-input type="password" placeholder="Contraseña"></ion-input>
+        </ion-item>
+        <ion-button expand="full" (click)="login()" size="large" id="btn-login" class=" btn-login btn-medium " shape="round">
+            Login
+        </ion-button>
+        <br>
+        <fieldset style="border-left: none !important; border-right: none !important; border-bottom: none !important; border-top: 1px solic #ffffff;">
+            <legend class="text-c" style="color: #ffffff; font-size: 18px;">&nbsp;&nbsp;&nbsp;&nbsp; O iniciar con&nbsp;&nbsp;&nbsp;&nbsp; </legend>
+        </fieldset>
+        <ion-button expand="full" (click)="loginFb()" size="large" class="btn-login" shape="round">
+            <ion-icon slot="start" name="logo-facebook" size="large"></ion-icon>
+            <ion-label class="text-c" style="text-transform: capitalize;">
+                Continuar con facebook
+            </ion-label>
+        </ion-button>
+
+        <br>
+        <p class="text-c">
+            Aun no tienes cuenta <a>Registrarme</a>
+        </p>
+    </div>
+
+
 </ion-content>
-<ion-footer padding>
-  <ion-button expand="full" (click)="loginFb()" size="large">
-    <ion-icon slot="start" name="logo-facebook" size="large"></ion-icon>
-    <ion-label class="text-c" style="text-transform: capitalize;">
-      Continuar con facebook
-    </ion-label>
-    </ion-button>
-</ion-footer>
